<resources>
    <string name="app_name">Bol.</string>
    <string name="uuid">uuid</string>
    <string name="no_connection">No connection, yo!</string>
    <string name="post_a_story">Ready to be heard?</string>
    <string name="no_internet_connection">You are not connected to the internet</string>
    <string name="play_story">Listen to this story</string>
    <string name="favourite_story">Mark it as favourite</string>
    <string name="refresh">Refresh</string>
    <string name="upload">Upload</string>
    <string name="upvotes">Upvote the story</string>
    <string name="downvotes">Downvote the story</string>
    <string name="stop_recording">Stop recording</string>
    <string name="start_recording">Start recording</string>
    <string name="stop_playing">Stop playing</string>
    <string name="start_playing">Start playing</string>
    <string name="empty_view_text">No stories yet</string>
    <string name="mark_favourite">Mark it a favourite</string>
    <string name="record_audio_denied_permission">The world can\'t hear you without these permissions</string>
    <string name="upload_success">You can be heard now!</string>
    <string name="record_audio_rationale">Need this permission to upload your story</string>
    <string name="reply_thought">Reply to this thought</string>
    <string name="facebook_application_id" translatable="false">475473175983005</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb475473175983005</string>
</resources>
