<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageButton
        android:id="@+id/play_button"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:tint="@color/colorAccent"
        android:background="@color/tw__transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:contentDescription="@string/play_story"/>
    <ImageButton
        android:id="@+id/upvotes_button"
        android:tint="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/tw__transparent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/upvotes"/>
    <ImageButton
        android:id="@+id/downvotes_button"
        android:tint="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/tw__transparent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/downvotes"/>
</RelativeLayout>